--- a/10bestadaptions.html
+++ b/10bestadaptions.html
@@ -16,7 +16,7 @@
  <nav class= "sticky">
       <ul>
         <li><a href="oldindex.html">Home</a></li>
-        <li><a class="active" href="10 best adaptions.html">10 Best Book to Television/Film Adaptions</a></li>
+        <li><a class="active" href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
         <li><a href="website2.html">Website 2</a></li>
       </ul>
     </nav>
@@ -41,7 +41,7 @@
 
 <section class="media-holder">
 	<div class="image-holder">
-		<img src="img/Hunger Games Book Cover.jpg" alt="The Hunger Games book cover">
+		<img src="img/HungerGamesBookCover.jpg" alt="The Hunger Games book cover">
 	</div>
 	<div class="text-holder">
 		<h2>The Hunger Games</h2>
@@ -53,7 +53,7 @@
 
 <section class="media-holder">
 	<div class="image-holder">
-	<img src="img/Little Women Book Cover.jpg" alt="Little Women book cover">
+	<img src="img/LittleWomenBookCover.jpg" alt="Little Women book cover">
 	</div>
 	<div class="text-holder">
 	<h2>Little Women</h2>
@@ -64,7 +64,7 @@
 	
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/Pride and Predjudice Book Cover.jpg" alt="Pride and Prejudice book cover">
+	<img src="img/PrideandPredjudiceBookCover.jpg" alt="Pride and Prejudice book cover">
 	</div>
 	<div class="text-holder">
 	<h2>Pride and Prejudice</h2>
@@ -75,7 +75,7 @@
 
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/The Great Gatsby Book Cover.jpg" alt="The Great Gatsby book cover">
+	<img src="img/TheGreatGatsbyBookCover.jpg" alt="The Great Gatsby book cover">
 	</div>
 	<div class="text-holder">
 	<h2>The Great Gatsby</h2>
@@ -86,7 +86,7 @@
 	
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/Silver Linings Playbook Book Cover.jpg" alt="The Silver Linings Playbook book cover">
+	<img src="img/SilverLiningsPlaybookBookCover.jpg" alt="The Silver Linings Playbook book cover">
 	</div>
 	<div class="text-holder">
 	<h2>The Silver Linings Playbook</h2>
@@ -97,7 +97,7 @@
 	
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/Perks of Being a Wallflower Book Cover.jpg" alt="The Perks of Being a Wallflower book cover">
+	<img src="img/PerksofBeingaWallflowerBookCover.jpg" alt="The Perks of Being a Wallflower book cover">
 	</div>
 	<div class="text-holder">
 	<h2>The Perks of Being a Wallflower</h2>
@@ -108,7 +108,7 @@
 	
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/Little Fires Everywhere Book Cover.jpg" alt="Little Fires Everywhere book cover">
+	<img src="img/LittleFiresEverywhereBookCover.jpg" alt="Little Fires Everywhere book cover">
 	</div>
 	<div class="text-holder">
 	<h2>Little Fires Everywhere</h2>
@@ -119,7 +119,7 @@
 	
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/The Hobbit Book Cover.jpg" alt="The Hobbit book cover">
+	<img src="img/TheHobbitBookCover.jpg" alt="The Hobbit book cover">
 	</div>
 	<div class="text-holder">
 	<h2>The Hobbit</h2>
@@ -130,7 +130,7 @@
 	
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/Game of Thrones Book Cover.jpg" alt="A Game of Thrones book cover">
+	<img src="img/GameofThronesBookCover.jpg" alt="A Game of Thrones book cover">
 	</div>
 	<div class="text-holder">
 	<h2>A Game of Thrones</h2>
@@ -139,6 +139,6 @@
 	</div>
 </section>
 </main>
-</body>
 <footer>2023 Nicole Gutierrez</footer>	
+</body>
 </html>
