--- a/oldindex.html
+++ b/oldindex.html
@@ -17,9 +17,9 @@
 
 	 <nav class= "sticky">
       <ul>
-        <li><a class="active" href="oldindex.html">Home</a></li>
-        <li><a href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
-        <li><a href="website2.html">Website 2</a></li>
+        <li><a href="oldindex.html">Home</a></li>
+        <li><a class="active" href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
+        <li><a href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
       </ul>
     </nav>
 
