skips and gallery

--- a/10bestadaptions.html
+++ b/10bestadaptions.html
@@ -13,6 +13,7 @@
 
 
  <body class="media-list">
+ 	<header id="top">
  <nav class= "sticky">
       <ul>
         <li><a href="oldindex.html">Home</a></li>
@@ -20,7 +21,7 @@
         <li><a href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
       </ul>
     </nav>
-
+</header>
 
 
 
@@ -139,6 +140,10 @@
 	</div>
 </section>
 </main>
-<footer>2023 Nicole Gutierrez</footer>	
+<footer>2023 Nicole Gutierrez
+	<p>
+    <a href="#top">Jump to top</a>
+  </p>
+</footer>	
 </body>
 </html>
