--- a/oldindex.html
+++ b/oldindex.html
@@ -14,7 +14,7 @@
 		<meta charset='utf-8'>
 			<title>NG example page</title>
 	</head>
-
+<header id="top">
 	 <nav class= "sticky">
       <ul>
         <li><a href="oldindex.html">Home</a></li>
@@ -22,6 +22,7 @@
         <li><a href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
       </ul>
     </nav>
+    </header>
 
 <main>
 	<h1>Nicole Gutierrez - nicole.gutierrez314@gmail.com</h1>
@@ -44,5 +45,9 @@
 		<h5><a href="website2.html">Click here for website2</a></h5>
 		<h5><a href="https://www.columbiamissourian.com/">Columbia Missourian</a></h5>
 </main>
-<footer>2023 Nicole Gutierrez</footer>	
+<footer>2023 Nicole Gutierrez
+	<p>
+    <a href="#top">Jump to top</a>
+  </p>
+</footer>	
 </html>
