--- a/workspacesphoto.html
+++ b/workspacesphoto.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style>
-img {
-  max-width: 100%;
-}
+	
 </style>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Gloock&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src="js/photojavascript.js" defer></script>
 
 	
 	<meta charset="utf-8">
@@ -18,6 +16,7 @@ img {
 	<title>Workspaces</title>
 </head>
 <body>
+  <header id="top">
 <nav class= "sticky">
       <ul>
         <li><a href="oldindex.html">Home</a></li>
@@ -26,6 +25,8 @@ img {
         <li><a class="active" href="workspacesphoto.html">Workspaces</a></li>
       </ul>
     </nav>
+</header>
+
 <main>
 	<h1>Workspaces</h1>
 		<p><span class="firstcharacter">T</span>his photo essay represents the workspaces I interact with in a day. Some photos show my own workspaces while others show the workspaces of those I work closely with. Each photo is also meant to display the uniqueness of each desk or table.</p>
@@ -35,6 +36,7 @@ img {
       <p id="stepper"></p>
       <button id="button_next">Next &#9658;</button>
     </div>
+
 
       <figure class="gallery-image hideThis">
       <img src="img/nicoledesk.jpg" alt="An aerial view of a desk in a corner with books, pencils, paint, a cup, a cndle, an open notebook and a book. There are many colorful and diverse art and postcards on the wall.">
@@ -80,4 +82,9 @@ img {
 
 </main>
 </body>
+<footer>2023 Nicole Gutierrez
+  <p>
+    <a href="#top">Jump to top</a>
+  </p>
+  </footer>  
 </html>
