--- a/stlouisbestbookstores.html
+++ b/stlouisbestbookstores.html
@@ -15,6 +15,8 @@
 	<title>St. Louis's Best Bookstores</title>
 </head>
 <body>
+ <header id="top">
+	<a href="#main" class="skip">Skip to main content</a>
 <nav class= "sticky">
       <ul>
         <li><a href="oldindex.html">Home</a></li>
@@ -22,7 +24,10 @@
         <li><a class="active" href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
       </ul>
     </nav>
-<main>
+</header>
+
+
+<main id="main">
 	<h1>St. Louis's Best Bookstores</h1>
 		<p><span class="firstcharacter">L</span>orem ipsum dolor sit amet, consectetur adipiscing elit. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
@@ -135,6 +140,10 @@
 
 
 
-<footer>2023 Nicole Gutierrez</footer>
+<footer>2023 Nicole Gutierrez
+<p>
+    <a href="#top">Jump to top</a>
+  </p>
+</footer>
 </body>
 </html>
