--- a/10bestadaptions.html
+++ b/10bestadaptions.html
@@ -19,6 +19,7 @@
         <li><a href="oldindex.html">Home</a></li>
         <li><a class="active" href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
         <li><a href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
+        <li><a href="workspacesphoto.html">Workspaces</a></li>
       </ul>
     </nav>
 </header>
@@ -87,7 +88,7 @@
 	
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/SilverLiningsPlaybookBookCover.jpg" alt="The Silver Linings Playbook book cover">
+	<img src="img/SilverLining PlaybookBookCover.jpg" alt="The Silver Linings Playbook book cover">
 	</div>
 	<div class="text-holder">
 	<h2>The Silver Linings Playbook</h2>
