--- a/oldindex.html
+++ b/oldindex.html
@@ -10,24 +10,25 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Gloock&family=PT+Sans+Narrow:wght@700&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
 
-		<link rel="stylesheet" href="css/stylenicolewebsitecopy.css">
+		<link rel="stylesheet" href="css/styles.css">
 		<meta charset='utf-8'>
 			<title>NG example page</title>
 	</head>
 <header id="top">
 	 <nav class= "sticky">
       <ul>
-        <li><a href="oldindex.html">Home</a></li>
-        <li><a class="active" href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
+       <li><a class="active" href="oldindex.html">Home</a></li>
+        <li><a href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
         <li><a href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
+        <li><a href="workspacesphoto.html">Workspaces</a></li>
       </ul>
     </nav>
     </header>
 
 <main>
 	<h1>Nicole Gutierrez - nicole.gutierrez314@gmail.com</h1>
-		<p>how do you organize a space party? you planet!</p>
-		<a href="mailto:nicole.gutierrez314@gmail.com"><img src="img/nicolegutierrez.jpg" alt="Nicole Gutierrez"></a>
+		<h4>how do you organize a space party? you planet!</h4>
+		<a class="imgcenter" href="mailto:nicole.gutierrez314@gmail.com"><img src="img/nicolegutierrez.jpg" alt="Nicole Gutierrez"></a>
 	<div>
 		<ul>
 			<li>The Great Gatsby</li>
