--- a/stlouisbestbookstores.html
+++ b/stlouisbestbookstores.html
@@ -22,6 +22,7 @@
         <li><a href="oldindex.html">Home</a></li>
         <li><a href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
         <li><a class="active" href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
+        <li><a href="workspacesphoto.html">Workspaces</a></li>
       </ul>
     </nav>
 </header>
