--- a/oldindex.html
+++ b/oldindex.html
@@ -8,7 +8,7 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Gloock&family=PT+Sans+Narrow:wght@700&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Gloock&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/styles.css">
 		<meta charset='utf-8'>
@@ -28,7 +28,7 @@
 <main>
 	<h1>Nicole Gutierrez - nicole.gutierrez314@gmail.com</h1>
 		<h4>how do you organize a space party? you planet!</h4>
-		<a class="imgcenter" href="mailto:nicole.gutierrez314@gmail.com"><img src="img/nicolegutierrez.jpg" alt="Nicole Gutierrez"></a>
+		<a class="imgcenter" href="mailto:nicole.gutierrez314@gmail.com"><img src="img/nicolegutierrez.JPG" alt="Nicole Gutierrez"></a>
 	<div>
 		<ul>
 			<li>The Great Gatsby</li>
