--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header id="top">
 	 <nav class= "sticky">
       <ul>
-       <li><a class="active" href="oldindex.html">Home</a></li>
+       <li><a class="active" href="index.html">Home</a></li>
         <li><a href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
         <li><a href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
         <li><a href="workspacesphoto.html">Workspaces</a></li>
