--- a/10bestadaptions.html
+++ b/10bestadaptions.html
@@ -22,7 +22,7 @@
  	<header id="top">
  <nav class= "sticky">
       <ul>
-        <li><a href="oldindex.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a class="active" href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
         <li><a href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
         <li><a href="workspacesphoto.html">Workspaces</a></li>
