--- a/stlouisbestbookstores.html
+++ b/stlouisbestbookstores.html
@@ -18,7 +18,7 @@
 	<a href="#main" class="skip">Skip to main content</a>
 <nav class= "sticky">
       <ul>
-        <li><a href="oldindex.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="10bestadaptions.html">10 Best Book to Television/Film Adaptions</a></li>
         <li><a class="active" href="stlouisbestbookstores.html">St. Louis's Best Bookstores</a></li>
         <li><a href="workspacesphoto.html">Workspaces</a></li>
