--- a/10bestadaptions.html
+++ b/10bestadaptions.html
@@ -94,14 +94,13 @@
 	
 	<section class="media-holder">
 	<div class="image-holder">
-	<img src="img/SilverLining PlaybookBookCover.jpg" alt="The Silver Linings Playbook book cover">
+	<img src="img/SilverLiningPlaybookBookCover.jpg" alt="The Silver Linings Playbook book cover">
 	</div>
 	<div class="text-holder">
 	<h2>The Silver Linings Playbook</h2>
 		<h3>By Matthew Quick</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 	</div>
-</div>
 </section>
 	
 	<section class="media-holder">
